tests/negative/test_mac_fnc_same_name.orb
mac foo (a b) {
    ret \();
};
fnc foo (x:i32) () {};

fnc main () () {};